Got the tuple pair test passing including the auto-complete for the bool-part.